syntax = "proto3";
import "def/tagEnablerDefinition.proto";
option java_package = "de.sg_o.proto.tagy";
option java_outer_classname = "TagDefinitionProto";

//SpecVersion: 1

message TagDefinition {
  string key = 1;
  optional string name = 2;
  optional string description = 3;
  Type type = 4;
  optional double min = 5;
  optional double max = 6;
  bool required = 7;
  repeated string enumerators = 8;
  optional Parameter parameter = 9;
  optional TagDefinition internal = 10;
  optional int32 fixedSize = 11;
  optional TagEnablerDefinition tagEnabler = 12;
}

enum Type {
  UNKNOWN = 0;
  LIST = 1;
  LONG = 2;
  DOUBLE = 3;
  ENUM = 4;
  STRING = 5;
  DATE = 6;
  BOOLEAN = 7;
}

enum Parameter {
  //No parameter is used
  NONE = 0;
  //Point where the desired content starts in video or audio in milliseconds
  IN = 1;
  //Point where the desired content ends in video or audio in milliseconds
  OUT = 2;
  //Total length of the video or audio in milliseconds
  LENGTH = 3;
  POINT_2D = 4; //Indicates that the fixed size list with at least 2 values should be interpreted as a 2d point
  POINT_3D = 5; //Indicates that the fixed size list with at least 3 values should be interpreted as a 3d point
  LINE = 6; //Indicates that a fixed size list with at least 4 values should be interpreted as a line segment between two points.
  RECTANGLE = 7; //Indicates that the fixed size list with at least 4 values should be interpreted as a rectangle with a start point and width and height.
  CIRCLE = 8; //Indicates that the fixed size list with at least 3 values should be interpreted as a circle with a center point and radius.
}